Fixes topbar z-index

--- a/generators/app/templates/src/styles/_topbar.scss
+++ b/generators/app/templates/src/styles/_topbar.scss
@@ -43,7 +43,7 @@
 	.topbar {
 		position: fixed;
 		top: 0;
-		z-index: 1;
+		z-index: 2;
 	}
 }
 
